--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="body">
 <input id="text"></input>
-<div id="options"></div>
+<div id="results"></div>
 
     <script src = "search.js"></script>
 </body>
